--- a/src/pages/lyrics/a-collection-of-sounds/the-indifference.astro
+++ b/src/pages/lyrics/a-collection-of-sounds/the-indifference.astro
@@ -17,7 +17,7 @@ import PageTitle from "@/components/PageTitle.astro";
     </head>
     <body class="min-h-screen">
         <Navbar />
-        <main class="min-h-screen flex flex-col justify-center items-center p-10 pt-0 gap-y-5 sm:gap-y-10">
+        <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5 sm:gap-y-10">
             <div class="flex flex-col gap-y-4 font-jetbrains text-xs leading-relaxed max-w-lg text-center">
                 <span class="gap-y-2">
                     <p> It’s ripping me apart to see you this way </p>
