--- a/src/pages/lyrics/a-collection-of-sounds/a-profound-desire.astro
+++ b/src/pages/lyrics/a-collection-of-sounds/a-profound-desire.astro
@@ -17,7 +17,7 @@ import PageTitle from "@/components/PageTitle.astro";
     </head>
     <body>
         <Navbar />
-        <main class="min-h-screen flex flex-col justify-center items-center p-10 pt-0 gap-y-5 sm:gap-y-10">
+        <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5 sm:gap-y-10">
             <div class="flex flex-col gap-y-6 font-jetbrains text-xs leading-relaxed max-w-lg text-center">
                 <span class="gap-y-2">
                     <p> I have collections of sounds and melodies that scream through the heart </p>
