--- a/src/pages/lyrics/index.astro
+++ b/src/pages/lyrics/index.astro
@@ -18,7 +18,7 @@ import PageTitle from "@/components/PageTitle.astro";
     </head>
     <body>
         <Navbar />
-        <main class="min-h-screen flex flex-col justify-center items-center p-10 pt-0 gap-y-5 sm:gap-y-10">
+        <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5 sm:gap-y-10">
             <div class="flex flex-col gap-y-6 font-jetbrains text-xs leading-relaxed max-w-lg text-left">
                 <a class="hover:text-blue-400" href="/lyrics/a-collection-of-sounds">A Collection Of Sounds and Melodies That Scream Through The Heart</a>
             </div>
