--- a/src/pages/lyrics/a-collection-of-sounds/the-indifference.astro
+++ b/src/pages/lyrics/a-collection-of-sounds/the-indifference.astro
@@ -18,6 +18,9 @@ import PageTitle from "@/components/PageTitle.astro";
     <body>
         <Navbar />
         <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5 sm:gap-y-10">
+            <audio controls>
+                <source src="/audio/indifference-rehearse.mp3" type="audio/mpeg">
+            </audio>
             <div class="flex flex-col gap-y-4 font-jetbrains text-xs leading-relaxed max-w-lg text-center">
                 <span class="gap-y-2">
                     <p> It’s ripping me apart to see you this way </p>
