--- a/src/pages/lyrics/a-collection-of-sounds/a-profound-desire.astro
+++ b/src/pages/lyrics/a-collection-of-sounds/a-profound-desire.astro
@@ -18,6 +18,9 @@ import PageTitle from "@/components/PageTitle.astro";
     <body class="min-h-screen">
         <Navbar />
         <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5 sm:gap-y-10">
+            <audio controls>
+                <source src="/audio/a-profound-desire-rehearse.mp3" type="audio/mpeg">
+            </audio>
             <div class="flex flex-col gap-y-6 font-jetbrains text-xs leading-relaxed max-w-lg text-center">
                 <span class="gap-y-2">
                     <p> I have collections of sounds and melodies that scream through the heart </p>
