--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,33 +21,20 @@ import PageTitle from "@/components/PageTitle.astro";
     </head>
     <body>
         <Navbar />
-        <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5 sm:gap-y-10">
+        <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-2 sm:gap-y-7">
             <Image class="w-full max-w-md object-contain" loading="eager" src={lifechordBanner} alt="lifechord banner"/>
-            <div class="flex flex-col gap-y-6 font-jetbrains text-xs leading-relaxed max-w-md text-left">
+            <div class="flex flex-col gap-y-3 font-jetbrains text-xs leading-relaxed max-w-md text-center">
                 <p>
-                Bare witness the creation of a righteous culture, for the world is going through
-                a revolution infront of your eyes. Now more than ever, is it important to foster
-                a community with your peers. Make memories that last lifetimes. Scream to your heart's
-                content from the tallest rooftops. Show the world that your voice will go unheard.
+                I wish things were different. I wish the world was different.
                 </p>
                 <p>
-                The hands of fate will be extended to those in need of empathy and compassion.
-                It will offer assistance to those who can't muster up the courage to assist themselves.
-                And the voices of its children be will echoed throughout the halls of history.
-                </p>
-                <p>
-                Hate... Upon Hate... Upon Hate... We renounce this festering disease plaguing humanity.
-                You are not a slave to your ailments, you are human, and as human we must care.
-                We must look forward. We must be better.
-                </p>
-                <p>Rest assured...</p>
-                <p>Things. Will. Change.</p>
+                Maybe with hope and compassion, things can change.</p>
 
             </div>
-            <footer class="flex flex-col xs:flex-row items-center gap-6 sm:gap-10">
-                <Image class="w-52 sm:w-40 object-contain" loading="eager" src={lifechordLogo} alt="lifechord logo"/>
-                <Image class="w-52 sm:w-40 object-contain" loading="eager" src={bhlogo} alt="blackheaven logo"/>
-            </footer>
+            <!-- <footer class="flex flex-col xs:flex-row items-center gap-6 sm:gap-10"> -->
+            <!--     <Image class="w-52 sm:w-40 object-contain" loading="eager" src={lifechordLogo} alt="lifechord logo"/> -->
+            <!--     <Image class="w-52 sm:w-40 object-contain" loading="eager" src={bhlogo} alt="blackheaven logo"/> -->
+            <!-- </footer> -->
         </main>
     </body>
 </html>
