add about me section

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,7 @@
 ---
 const links = [
 	{ name: "Home", href: "/" },
+	{ name: "About", href: "/about" },
 	{ name: "Lyrics", href: "/lyrics" },
 ];
 ---
