--- a/src/pages/ja/about.astro
+++ b/src/pages/ja/about.astro
@@ -1,4 +1,3 @@
-
 ---
 import "@/styles/global.css";
 import Navbar from "@/components/Navbar.astro";
@@ -20,28 +19,16 @@ import PageTitle from "@/components/PageTitle.astro";
         <Navbar />
         <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5">
             <div class="flex flex-col gap-y-3 font-jetbrains text-xs leading-relaxed max-w-md w-full text-center">
-                <p>
-                This band is about hope and compassion.
-                </p>
-                <p>
-                Do you hate how much the world sucks? Do you want to make the most of it anyways?
-                </p>
-                <p>
-                Then this band is for you.
-                </p>
+                <p>このバンドは、希望と思いやりをテーマにしています。</p>
+                <p>世界のひどさにうんざりしていますか？それでも、この人生を精一杯楽しみたいですか？</p>
+                <p>それなら、このバンドはあなたのためのものです。</p>
                 <br>
-                <p>
-                Live more life. Start today.
-                </p>
+                <p>もっと人生を生きよう。今日から始めよう。</p>
             </div>
             <br>
             <div class="justify-center sm:justify-start gap-y-3 font-jetbrains text-xs max-w-md leading-relaxed text-left">
                 <p>Matthew, Ben, Albert, Gabi, Jayson</p>
             </div>
-            <!-- <footer class="flex flex-col xs:flex-row items-center gap-6 sm:gap-10"> -->
-            <!--     <Image class="w-52 sm:w-40 object-contain" loading="eager" src={lifechordLogo} alt="lifechord logo"/> -->
-            <!--     <Image class="w-52 sm:w-40 object-contain" loading="eager" src={bhlogo} alt="blackheaven logo"/> -->
-            <!-- </footer> -->
         </main>
     </body>
 </html>
