--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,6 +1,7 @@
 ---
 import "@/styles/global.css";
 import { Image } from "astro:assets";
+import lifechordBanner from "@/lcbanner.webp";
 import Navbar from "@/components/Navbar.astro";
 import PageTitle from "@/components/PageTitle.astro";
 ---
@@ -8,7 +9,7 @@ import PageTitle from "@/components/PageTitle.astro";
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <PageTitle page="Lyrics"/>
+        <PageTitle />
         <!-- Standard favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -18,12 +19,12 @@ import PageTitle from "@/components/PageTitle.astro";
     </head>
     <body class="min-h-screen">
         <Navbar />
-        <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5 sm:gap-y-10">
-            <div class="flex flex-col gap-y-6 font-jetbrains text-xs leading-relaxed max-w-md text-left">
-                <a class="hover:text-blue-400" href="/lyrics/a-collection-of-sounds/a-profound-desire">A Profound Desire To Feel Compassion For Others</a>
-                <a class="hover:text-blue-400" href="/lyrics/a-collection-of-sounds/the-indifference">The Indifference</a>
+        <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5">
+            <Image class="w-full max-w-md object-contain" loading="eager" src={lifechordBanner} alt="lifechord banner"/>
+            <div class="flex flex-col gap-y-3 font-jetbrains text-xs leading-relaxed max-w-md text-center">
+                <p>I wish life was different. I wish the world was different.</p>
+                <p>It's time we take a hard look at ourselves and start caring about someone else.</p>
             </div>
         </main>
     </body>
 </html>
-
