--- a/src/pages/en/lyrics/index.astro
+++ b/src/pages/en/lyrics/index.astro
@@ -1,12 +1,17 @@
 ---
 import "@/styles/global.css";
+import { Image } from "astro:assets";
+import Navbar from "@/components/Navbar.astro";
 import PageTitle from "@/components/PageTitle.astro";
+
+import { localizedHref } from "@/utils";
+const { currentLocale } = Astro;
 ---
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <PageTitle page="404"/>
+        <PageTitle page="Lyrics"/>
         <!-- Standard favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -15,8 +20,11 @@ import PageTitle from "@/components/PageTitle.astro";
         <link rel="manifest" href="/favicon/site.webmanifest">
     </head>
     <body class="min-h-screen">
-        <div class="h-screen flex flex-col justify-center items-center font-jetbrains gap-y-5">
-            <span class="text-5xl font-extrabold">404</span>
-        </div>
+        <Navbar />
+        <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5 sm:gap-y-10">
+            <div class="flex flex-col gap-y-6 font-jetbrains text-xs leading-relaxed max-w-lg text-left">
+                <a class="hover:text-blue-400" href={localizedHref("/lyrics/a-collection-of-sounds", currentLocale)}>A Collection Of Sounds and Melodies That Scream Through The Heart</a>
+            </div>
+        </main>
     </body>
 </html>
