--- a/src/pages/ja/lyrics/index.astro
+++ b/src/pages/ja/lyrics/index.astro
@@ -3,6 +3,9 @@ import "@/styles/global.css";
 import { Image } from "astro:assets";
 import Navbar from "@/components/Navbar.astro";
 import PageTitle from "@/components/PageTitle.astro";
+
+import { localizedHref } from "@/utils";
+const { currentLocale } = Astro;
 ---
 <html lang="en">
     <head>
@@ -20,7 +23,7 @@ import PageTitle from "@/components/PageTitle.astro";
         <Navbar />
         <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5 sm:gap-y-10">
             <div class="flex flex-col gap-y-6 font-jetbrains text-xs leading-relaxed max-w-lg text-left">
-                <a class="hover:text-blue-400" href="/lyrics/a-collection-of-sounds">A Collection Of Sounds and Melodies That Scream Through The Heart</a>
+                <a class="hover:text-blue-400" href={localizedHref("/lyrics/a-collection-of-sounds", currentLocale)}>心に響き渡る音と旋律のコレクション</a>
             </div>
         </main>
     </body>
