--- a/src/pages/ja/about.astro
+++ b/src/pages/ja/about.astro
@@ -2,6 +2,7 @@
 import "@/styles/global.css";
 import Navbar from "@/components/Navbar.astro";
 import PageTitle from "@/components/PageTitle.astro";
+import BackButton from "@/components/BackButton.astro";
 ---
 <html lang="en">
     <head>
@@ -18,6 +19,7 @@ import PageTitle from "@/components/PageTitle.astro";
     <body class="min-h-screen">
         <Navbar />
         <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5">
+            <BackButton />
             <div class="flex flex-col gap-y-3 font-jetbrains text-xs leading-relaxed max-w-md w-full text-center">
                 <p>このバンドは、希望と思いやりをテーマにしています。</p>
                 <p>世界のひどさにうんざりしていますか？それでも、この人生を精一杯楽しみたいですか？</p>
