--- a/src/pages/ja/lyrics/a-collection-of-sounds/the-indifference.astro
+++ b/src/pages/ja/lyrics/a-collection-of-sounds/the-indifference.astro
@@ -2,6 +2,7 @@
 import "@/styles/global.css";
 import Navbar from "@/components/Navbar.astro";
 import PageTitle from "@/components/PageTitle.astro";
+import BackButton from "@/components/BackButton.astro";
 ---
 <html lang="en">
     <head>
@@ -18,6 +19,7 @@ import PageTitle from "@/components/PageTitle.astro";
     <body class="min-h-screen">
         <Navbar />
         <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5 sm:gap-y-10">
+            <BackButton />
             <audio controls>
                 <source src="/audio/indifference-rehearse.mp3" type="audio/mpeg">
             </audio>
