--- a/src/components/BackButton.astro
+++ b/src/components/BackButton.astro
@@ -4,7 +4,7 @@ import ja from "@/i18n/ja.json";
 const { currentLocale } = Astro;
 const t = { en, ja }[currentLocale];
 ---
-<button id="back-btn" class="flex items-center gap-x-1 text-xs font-jetbrains font-medium cursor-pointer hover:underline">
+<button id="back-btn" class="flex items-center gap-x-1 text-xs font-jetbrains cursor-pointer hover:underline">
     <svg xmlns="http://www.w3.org/2000/svg" class="size-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
     </svg>
