--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,9 +7,10 @@ import { localizedHref } from "@/utils";
 const { currentLocale } = Astro;
 const t = { en, ja }[currentLocale];
 const links = [
-	{ key: "home", href: "/" },
-	{ key: "about", href: "/about" },
-	{ key: "lyrics", href: "/lyrics" },
+    { key: "home", href: "/" },
+    { key: "about", href: "/about" },
+    { key: "lyrics", href: "/lyrics" },
+    { key: "memories", href: "/memories" },
 ];
 ---
 
