add sal's last name

--- a/src/pages/en/memories/11_29_2025/index.astro
+++ b/src/pages/en/memories/11_29_2025/index.astro
@@ -34,7 +34,7 @@ const images = Object.values(raw).map((m) => {
         <Navbar />
         <main class="flex flex-col items-center p-10">
             <p class="py-5 flex flex-col font-jetbrains text-xs leading-relaxed max-w-md text-center">
-                <span>Picture taken by Ramona Banos and Sal</span>
+                <span>Picture taken by Ramona Banos and Sal Rispoli</span>
                 <span>At Churchill's Pub, November 29th, 2025</span>
             <p>
             <div class="max-w-7xl py-10">
