--- a/src/pages/ja/memories/11_29_2025/index.astro
+++ b/src/pages/ja/memories/11_29_2025/index.astro
@@ -34,7 +34,7 @@ const images = Object.values(raw).map((m) => {
         <Navbar />
         <main class="flex flex-col items-center p-10">
             <p class="py-5 flex flex-col font-jetbrains text-xs leading-relaxed max-w-md text-center">
-                <span>Ramona Banos と Sal によって撮影された写真</span>
+                <span>Ramona Banos と Sal Rispoli によって撮影された写真</span>
                 <span>Churchill's Pub にて、2025年11月29日</span>
 
             <p>
