--- a/src/pages/en/memories/11_29_2025/index.astro
+++ b/src/pages/en/memories/11_29_2025/index.astro
@@ -37,11 +37,12 @@ const images = Object.values(raw).map((m) => {
                 <span>Picture taken by Ramona Banos and Sal Rispoli</span>
                 <span>At Churchill's Pub, November 29th, 2025</span>
             <p>
-            <div class="max-w-7xl py-10">
-                <div class="grid gap-2 sm:gap-3 grid-cols-2 sm:grid-cols-3 lg:grid-cols-4">
+            <div class="max-w-3xl py-10">
+                <div class="grid gap-2 sm:gap-3 grid-cols-2 sm:grid-cols-4 lg:grid-cols-5">
                     {images.map(({ meta, isWide }, index) => (
-                        <div class={`${isWide ? "col-span-2" : ""}`}>
+                        <div class={`h-full overflow-hidden ${isWide ? "col-span-2" : ""}`}>
                             <Image
+                                class="h-full w-full object-cover"
                                 src={meta}
                                 alt={`Band photo ${index + 1}`}
                             />
