--- a/src/pages/en/memories/10_18_2025/index.astro
+++ b/src/pages/en/memories/10_18_2025/index.astro
@@ -7,7 +7,7 @@ import type { ImageMetadata } from "astro";
 import BackButton from "@/components/BackButton.astro";
 
 const raw = import.meta.glob<{ default: ImageMetadata }>(
-    "/public/band_pictures/11-29-2025/*.{jpg,jpeg,png,webp}",
+    "/public/band_pictures/10-18-2025/*.{jpg,jpeg,png,webp}",
     { eager: true },
 );
 
@@ -36,11 +36,11 @@ const images = Object.values(raw).map((m) => {
         <main class="flex flex-col items-center p-10">
             <BackButton />
             <p class="py-5 flex flex-col font-jetbrains text-xs leading-relaxed max-w-md text-center">
-                <span>Picture taken by Ramona Banos and Sal Rispoli</span>
-                <span>At Churchill's Pub, November 29th, 2025</span>
+                <span>Picture taken by Carlos</span>
+                <span>At The American Legion Post 92, October 18th, 2025</span>
             <p>
             <div class="max-w-3xl py-10">
-                <div class="grid gap-2 sm:gap-3 grid-cols-2 sm:grid-cols-4 lg:grid-cols-5">
+                <div class="grid gap-2 sm:gap-3 grid-cols-2 sm:grid-cols-4">
                     {images.map(({ meta, isWide }, index) => (
                         <div class={`h-full overflow-hidden ${isWide ? "col-span-2" : ""}`}>
                             <Image
