--- a/src/pages/en/memories/11_29_2025/index.astro
+++ b/src/pages/en/memories/11_29_2025/index.astro
@@ -1,7 +1,7 @@
 ---
 import "@/styles/global.css";
 import Navbar from "@/components/Navbar.astro";
-import PageTitle from "@/components/PageTitle.astro";
+import Base from "@/layouts/base.astro";
 import { Image } from "astro:assets";
 import type { ImageMetadata } from "astro";
 import BackButton from "@/components/BackButton.astro";
@@ -19,39 +19,37 @@ const images = Object.values(raw).map((m) => {
     };
 });
 ---
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <PageTitle page="Memories"/>
-        <!-- Standard favicon -->
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-        <!-- IOS / android favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-        <link rel="manifest" href="/favicon/site.webmanifest">
-    </head>
-    <body class="min-h-screen">
-        <Navbar />
-        <main class="flex flex-col items-center p-10">
-            <BackButton />
-            <p class="py-5 flex flex-col font-jetbrains text-xs leading-relaxed max-w-md text-center">
-                <span>Picture taken by Ramona Banos and Sal Rispoli</span>
-                <span>At Churchill's Pub, November 29th, 2025</span>
+
+<Base page="Memories">
+    <Navbar />
+    <main class="flex flex-col items-center p-10">
+        <BackButton />
+        <p
+            class="py-5 flex flex-col font-jetbrains text-xs leading-relaxed max-w-md text-center"
+        >
+            <span>Picture taken by Ramona Banos and Sal Rispoli</span>
+            <span>At Churchill's Pub, November 29th, 2025</span>
             <p>
-            <div class="max-w-3xl py-10">
-                <div class="grid gap-2 sm:gap-3 grid-cols-2 sm:grid-cols-4 lg:grid-cols-5">
-                    {images.map(({ meta, isWide }, index) => (
-                        <div class={`h-full overflow-hidden ${isWide ? "col-span-2" : ""}`}>
-                            <Image
-                                class="h-full w-full object-cover"
-                                src={meta}
-                                alt={`Band photo ${index + 1}`}
-                            />
-                        </div>
-                    ))}
+                <div class="max-w-3xl py-10">
+                    <div
+                        class="grid gap-2 sm:gap-3 grid-cols-2 sm:grid-cols-4 lg:grid-cols-5"
+                    >
+                        {
+                            images.map(({ meta, isWide }, index) => (
+                                <div
+                                    class={`h-full overflow-hidden ${isWide ? "col-span-2" : ""}`}
+                                >
+                                    <Image
+                                        class="h-full w-full object-cover"
+                                        src={meta}
+                                        alt={`Band photo ${index + 1}`}
+                                    />
+                                </div>
+                            ))
+                        }
+                    </div>
                 </div>
-            </div>
-        </main>
-    </body>
-</html>
+            </p>
+        </p>
+    </main>
+</Base>
