--- a/src/pages/ja/index.astro
+++ b/src/pages/ja/index.astro
@@ -3,28 +3,27 @@ import "@/styles/global.css";
 import { Image } from "astro:assets";
 import lifechordBanner from "@/lcbanner.webp";
 import Navbar from "@/components/Navbar.astro";
-import PageTitle from "@/components/PageTitle.astro";
+import Base from "@/layouts/base.astro";
 ---
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <PageTitle />
-        <!-- Standard favicon -->
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-        <!-- IOS / android favicon -->
-        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-        <link rel="manifest" href="/favicon/site.webmanifest">
-    </head>
-    <body class="min-h-screen">
-        <Navbar />
-        <main class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5">
-            <Image class="w-full max-w-md object-contain" loading="eager" src={lifechordBanner} alt="lifechord banner"/>
-            <div class="flex flex-col gap-y-3 font-jetbrains text-xs leading-relaxed max-w-md text-center">
-                <p>人生が違っていたらいいのに。世界が違っていたらいいのに。</p>
-                <p>そろそろ自分たちを見つめ直して、他の誰かを思いやることを始める時だ。</p>
-            </div>
-        </main>
-    </body>
-</html>
+
+<Base>
+    <Navbar />
+    <main
+        class="min-h-screen flex flex-col justify-center items-center p-10 md:pt-0 gap-y-5"
+    >
+        <Image
+            class="w-full max-w-md object-contain"
+            loading="eager"
+            src={lifechordBanner}
+            alt="lifechord banner"
+        />
+        <div
+            class="flex flex-col gap-y-3 font-jetbrains text-xs leading-relaxed max-w-md text-center"
+        >
+            <p>人生が違っていたらいいのに。世界が違っていたらいいのに。</p>
+            <p>
+                そろそろ自分たちを見つめ直して、他の誰かを思いやることを始める時だ。
+            </p>
+        </div>
+    </main>
+</Base>
