--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,15 +3,37 @@ import "@/styles/global.css";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>New! New!</h1>
-		<h1 class="text-primary">Lifechord!</h1>
-	</body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <meta name="viewport" content="width=device-width" />
+        <meta name="generator" content={Astro.generator} />
+        <title>Astro</title>
+    </head>
+    <body class="h-screen">
+        <main class="pt-40 flex flex-col justify-center items-center">
+            <div class="h-[220px] w-[650px]">
+                <div class="bg-zinc-800 h-6 w-full">placeholder header</div>
+                <div class="bg-blue-950 h-full w-full">image here</div>
+                <div
+                    class="relative my-1 bg-foreground/5 border border-l-0 border-r-0 border-foreground/30 h-[18px] w-full flex items-center overflow-clip"
+                >
+                    <span class="nav-item">NEWS</span>
+                    <span class="nav-item">ABOUT</span>
+                    <span class="nav-item">LYRICS</span>
+                    <span class="nav-item">MEMORIES</span>
+                    <span class="nav-item">CONTACT</span>
+                    <span
+                        class="absolute right-2 rotate-20 w-2 h-15 bg-foreground/10"
+                    ></span>
+                    <span
+                        class="absolute right-5 rotate-20 w-2 h-15 bg-foreground/10"
+                    ></span>
+                    <span
+                        class="absolute right-8 rotate-20 w-2 h-15 bg-foreground/10"
+                    ></span>
+                </div>
+            </div>
+        </main>
+    </body>
 </html>
