--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,11 @@
 @import "tailwindcss";
 
+@import "./fonts/font-jetbrains.css";
+
 @theme {
     --font-jetbrains: "JetBrains Mono", serif;
     --breakpoint-xs: 30rem;
+    --text-2xs: 10px;
 
     --color-background: var(--background);
     --color-foreground: var(--foreground);
@@ -10,7 +13,7 @@
 }
 
 :root {
-    --background: hsl(225.54 47% 14%);
+    --background: hsl(225.76 55% 8%);
     --foreground: hsl(222.02 46% 94%);
     --primary: hsl(46.65 100% 50%);
 }
@@ -21,37 +24,16 @@
     }
 
     body {
-        @apply min-h-screen bg-background text-foreground;
+        @apply bg-background text-foreground;
         font-feature-settings:
             "rlig" 1,
             "calt" 1;
     }
 }
 
-@font-face {
-    font-family: 'JetBrains Mono';
-    src: url('/fonts/JetBrainsMono-Regular.woff2') format('woff2');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'JetBrains Mono';
-    src: url('/fonts/JetBrainsMono-Medium.woff2') format('woff2');
-    font-weight: 500;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'JetBrains Mono';
-    src: url('/fonts/JetBrainsMono-SemiBold.woff2') format('woff2');
-    font-weight: 600;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'JetBrains Mono';
-    src: url('/fonts/JetBrainsMono-Bold.woff2') format('woff2');
-    font-weight: 700;
-    font-style: normal;
-}
+.nav-item {
+    @apply text-2xs
+    hover:bg-foreground/10
+    cursor-pointer
+    px-1.5
+};
