--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,39 +1,41 @@
 ---
 import "@/styles/global.css";
+import BaseLayout from "@/layout/Base.astro";
+import { Image } from "astro:assets";
+import Logo from "../images/band_logos/logo.png";
+import Grab from "../images/band_pictures/10-18-2025/01.jpeg";
 ---
 
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <meta name="viewport" content="width=device-width" />
-        <meta name="generator" content={Astro.generator} />
-        <title>Astro</title>
-    </head>
-    <body class="h-screen">
-        <main class="pt-40 flex flex-col justify-center items-center">
-            <div class="h-[220px] w-[650px]">
-                <div class="bg-zinc-800 h-6 w-full">placeholder header</div>
-                <div class="bg-blue-950 h-full w-full">image here</div>
-                <div
-                    class="relative my-1 bg-foreground/5 border border-l-0 border-r-0 border-foreground/30 h-[18px] w-full flex items-center overflow-clip"
+<BaseLayout>
+    <div class="flex justify-between">
+        <div class="flex flex-col items-start w-1/3">
+            <Image
+                class="mb-3"
+                width={200}
+                src={Logo}
+                layout="full-width"
+                alt="band name logo"
+            />
+            <span class="mb-3 text-xs text-primary font-bold">Updates</span>
+            <span class="flex flex-col gap-y-2">
+                <span class="text-2xs text-foreground/60 underline"
+                    >updates section under construction...</span
                 >
-                    <span class="nav-item">NEWS</span>
-                    <span class="nav-item">ABOUT</span>
-                    <span class="nav-item">LYRICS</span>
-                    <span class="nav-item">MEMORIES</span>
-                    <span class="nav-item">CONTACT</span>
-                    <span
-                        class="absolute right-2 rotate-20 w-2 h-15 bg-foreground/10"
-                    ></span>
-                    <span
-                        class="absolute right-5 rotate-20 w-2 h-15 bg-foreground/10"
-                    ></span>
-                    <span
-                        class="absolute right-8 rotate-20 w-2 h-15 bg-foreground/10"
-                    ></span>
-                </div>
-            </div>
-        </main>
-    </body>
-</html>
+                <!-- <span class="text-2xs text-foreground/60 underline" -->
+                <!--     >2026 incoming.. New site design!</span -->
+                <!-- > -->
+                <!-- <span class="text-2xs text-foreground/60 underline" -->
+                <!--     >New site layout, design and first run of shirts sould out!</span -->
+                <!-- > -->
+            </span>
+        </div>
+        <div class="flex flex-col items-end space-y-1 w-1/3">
+            <Image
+                height={150}
+                src={Grab}
+                layout="full-width"
+                alt="first show mic grab"
+            />
+        </div>
+    </div>
+</BaseLayout>
