add new song lyrics

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import BaseLayout from "@/layout/Base.astro";
 ---
 
 <BaseLayout>
-    <div class="flex flex-col gap-y-2 text-2xs text-left">
+    <div class="flex flex-col text-2xs text-left">
         <p>
             This band is about <span class="text-primary">HOPE</span> and <span
                 class="text-primary">COMPASSION</span
