--- a/src/pages/lyrics/collection/index.astro
+++ b/src/pages/lyrics/collection/index.astro
@@ -9,14 +9,11 @@ import BaseLayout from "@/layout/Base.astro";
         A Collection Of Sounds and Melodies That Scream Through The Heart
     </p>
     <div class="flex flex-col text-2xs text-left">
-        <a
-            class="text-2xs hover:underline"
-            href="/lyrics/collection/a-profound-desire"
+        <a class="href-song-lyrics" href="/lyrics/collection/a-profound-desire"
             >1. A Profound Desire To Feel Compassion For Others</a
         >
-        <a
-            class="text-2xs hover:underline"
-            href="/lyrics/collection/the-indifference">2. The Indifference</a
+        <a class="href-song-lyrics" href="/lyrics/collection/the-indifference"
+            >2. The Indifference</a
         >
     </div>
 </BaseLayout>
