--- a/src/pages/lyrics/index.astro
+++ b/src/pages/lyrics/index.astro
@@ -4,10 +4,15 @@ import BaseLayout from "@/layout/Base.astro";
 ---
 
 <BaseLayout page="Lyrics">
-    <div class="text-2xs hover:underline">
-        <a href="/lyrics/collection"
+    <a href="/" class="href-back">Back to home</a>
+    <p class="mt-3 text-primary text-xs">Records and Projects</p>
+    <div class="flex flex-col text-2xs text-left">
+        <a class="href-song-lyrics" href="/lyrics/collection"
             >2026 - A Collection Of Sounds and Melodies That Scream Through The
             Heart</a
+        >
+        <a class="href-song-lyrics" href="/lyrics/new-songs"
+            >Newly written miscellanous stuff! (cool shit)</a
         >
     </div>
 </BaseLayout>
