add memories, lightbox image viewers

--- a/src/layout/Base.astro
+++ b/src/layout/Base.astro
@@ -67,16 +67,16 @@ const navClass = (href) =>
                         <span
                             class="absolute right-[143px] rotate-20 w-1 h-15 bg-foreground/10"
                         ></span>
-                        <span
-                            id="clock"
-                            class="absolute font-medium right-2 text-2xs"
-                        ></span>
+                        <!-- <span -->
+                        <!--     id="clock" -->
+                        <!--     class="absolute font-medium right-2 text-2xs" -->
+                        <!-- ></span> -->
                         <span
                             class="absolute right-0.5 rotate-20 w-[134px] h-24 bg-foreground/10"
                         ></span>
                     </div>
                 </div>
-                <div class="w-[98%] mx-auto">
+                <div class="pb-30 w-[98%] mx-auto">
                     <slot />
                 </div>
             </div>
