--- a/src/pages/store.astro
+++ b/src/pages/store.astro
@@ -3,7 +3,7 @@ import "@/styles/global.css";
 import BaseLayout from "@/layout/Base.astro";
 ---
 
-<BaseLayout>
+<BaseLayout page="Store">
     <div class="flex flex-col items-center justify-center">
         <div class="w-3/5 text-center">
             <p class="text-primary text-xs">BEWARE, NOT A 404</p>
