--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@ import "@/styles/global.css";
 import BaseLayout from "@/layout/Base.astro";
 ---
 
-<BaseLayout>
+<BaseLayout page="About">
     <div class="flex flex-col text-2xs text-left">
         <p>
             This band is about <span class="text-primary">HOPE</span> and <span
